--- a/gkeapp/Dockerfile
+++ b/gkeapp/Dockerfile
@@ -7,7 +7,9 @@ ARG BUILD_DATE
 RUN mkdir -p /code
 WORKDIR /code
 ADD . /code
-RUN npm install -g -s --no-progress yarn && yarn install --prod
+RUN npm install yarn
+RUN yarn install --prod
+#RUN npm install -g -s --no-progress yarn && yarn install --prod
 
 ENV APP_COMMIT_REF=${COMMIT_REF} \
     APP_BUILD_DATE=${BUILD_DATE}
