--- a/gkeapp/k8s.template.yml
+++ b/gkeapp/k8s.template.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ${project_name}
+  name: service-gkeapp
   annotations:
     cloud.google.com/neg: '{"ingress": true}'
 spec:
   type: NodePort
   selector:
-    app: ${project_name}
+    app: gkeapp
   ports:
     - protocol: TCP
       port: 80
@@ -16,14 +16,14 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ${project_name}
+  name: deployment-gkeapp
   labels:
-    app: ${project_name}
+    app: gkeapp
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: ${project_name}
+      app: gkeapp
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -31,11 +31,11 @@ spec:
   template:
     metadata:
       labels:
-        app: ${project_name}
+        app: gkeapp
     spec:
       containers:
-        - name: ${project_name}
-          image: ${image_url}
+        - name: gkeapp
+          image: europe-west2-docker.pkg.dev/lofty-object-378217/web-app/stateless:latest
           env:
             - name: NODE_ENV
               value: 'production'
@@ -74,8 +74,8 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: ${project_name}
+  name: ingress-gkeapp
 spec:
   backend:
-    serviceName: ${project_name}
+    serviceName: service-gkeapp
     servicePort: 80
