--- a/gkeapp/k8s.template.yml
+++ b/gkeapp/k8s.template.yml
@@ -1,7 +1,13 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: gkeapp
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: service-gkeapp
+  namespace: gkeapp
   annotations:
     cloud.google.com/neg: '{"ingress": true}'
 spec:
@@ -17,6 +23,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: deployment-gkeapp
+  namespace: gkeapp
   labels:
     app: gkeapp
 spec:
@@ -79,3 +86,25 @@ spec:
 #  backend:
 #    serviceName: service-gkeapp
 #    servicePort: 80
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-gkeapp
+  namespace: gkeapp
+  annotations:
+    kubernetes.io/ingress.class: "gce"
+    #kubernetes.io/ingress.global-static-ip-name: "sq-address"
+    #networking.gke.io/managed-certificates: "managed-cert"
+    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
+spec:
+  rules:
+  - #host: sonarqube.d-e-l-o.com
+  - http:
+      paths:
+      - path: /*
+        pathType: ImplementationSpecific
+        backend:
+          service:
+            name: service-gkeapp
+            port: 
+              number: 80
