--- a/gkeapp/k8s.template.yml
+++ b/gkeapp/k8s.template.yml
@@ -106,17 +106,14 @@ metadata:
     networking.gke.io/managed-certificates: "managed-cert-gkeapp"
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
-  backend:
-    serviceName: service-gkeapp
-    servicePort: 80
-#  rules:
-#  - host: gkeapp.d-e-l-o.com
-#    http:
-#      paths:
-#      - path: /*
-#        pathType: ImplementationSpecific
-#        backend:
-#          service:
-#            name: service-gkeapp
-#            port: 
-#              number: 80
+  rules:
+  - host: gkeapp.d-e-l-o.com
+    http:
+      paths:
+      - path: /*
+        pathType: ImplementationSpecific
+        backend:
+          service:
+            name: service-gkeapp
+            port: 
+              number: 80
