--- a/webapp/manifests.k8s.yml
+++ b/webapp/manifests.k8s.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: webapp
-          image: quay.io/fairwinds/k8s-workshop:latest #europe-west2-docker.pkg.dev/lofty-object-378217/web/webapp:latest
+          image: europe-west2-docker.pkg.dev/lofty-object-378217/web/webapp:latest #quay.io/fairwinds/k8s-workshop:latest
           command: ["ruby", "app/app.rb"]
           ports:
           - containerPort: 8080
