--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -65,17 +65,17 @@ jobs:
         
         docker image ls
           
-    - name: Build gkeapp
-      run: |-
-        docker build .\
-          --file /home/runner/work/GKE/GKE/gkeapp/Dockerfile \
-          --tag "europe-west2-docker.pkg.dev/$PROJECT_ID/web-app/stateless:latest" \
-          --build-arg GITHUB_SHA="$GITHUB_SHA" \
-          --build-arg GITHUB_REF="$GITHUB_REF" \
-        
-        docker push "europe-west2-docker.pkg.dev/$PROJECT_ID/web-app/stateless:latest"
-
-        docker image ls
+#    - name: Build gkeapp
+#      run: |-
+#        docker build .\
+#          --file /home/runner/work/GKE/GKE/gkeapp/Dockerfile \
+#          --tag "europe-west2-docker.pkg.dev/$PROJECT_ID/web-app/stateless:latest" \
+#          --build-arg GITHUB_SHA="$GITHUB_SHA" \
+#          --build-arg GITHUB_REF="$GITHUB_REF" \
+#        
+#        docker push "europe-west2-docker.pkg.dev/$PROJECT_ID/web-app/stateless:latest"
+#
+#        docker image ls
 
     - name: Build webapp
       run: |-
@@ -105,4 +105,3 @@ jobs:
       run: |-
         kubectl apply -f sonarqube/manifests.yaml
         kubectl apply -f gkeapp/k8s.template.yml
-        kubectl delete -f webapp/manifests.k8s.yml
