--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -92,4 +92,4 @@ jobs:
     - name: Deploy manifests to gke
       run: |-
         kubectl apply -f sonarqube/manifests.yaml
-        kubectl apply -f gkeapp/k8s.template.yml
+        kubectl apply -f webapp/manifests.k8s.yml
