--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -93,3 +93,6 @@ jobs:
       run: |-
         kubectl apply -f sonarqube/manifests.yaml
         kubectl apply -f webapp/manifests.k8s.yml
+        kubectl delete ingress ingress-gkeapp -n gkeapp
+        kubectl delete svc service-gkeapp -n gkeapp
+        kubectl delete deployment deployment-gkeapp -n gkeapp
