--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -6,11 +6,11 @@ on:
 
 env:
   PROJECT_ID: lofty-object-378217
-  GAR_LOCATION: europe-west2 # TODO: update region of the Artifact Registry
-  GKE_CLUSTER: gkeapp   # TODO: update to cluster name
-  GKE_ZONE: europe-west2-a   # TODO: update to cluster zone
-  DEPLOYMENT_NAME: gke-test # TODO: update to deployment name
-  REPOSITORY: sonar-docker # TODO: update to Artifact Registry docker repository
+  GAR_LOCATION: europe-west2
+  GKE_CLUSTER: gkeapp
+  GKE_ZONE: europe-west2-a
+  DEPLOYMENT_NAME: gke-test
+  REPOSITORY: sonar-docker
   IMAGE: sonarqube
   POSTGRESQL_USERNAME: ${{ secrets.POSTGRESQL_USERNAME}}
   POSTGRESQL_PASSWORD: ${{ secrets.POSTGRESQL_PASSWORD}}
