--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -91,5 +91,5 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy manifests to gke
       run: |-
-        kubectl apply -f sonarqube/manifests.yaml
-        kubectl apply -f webapp/manifests.k8s.yml
+#        kubectl apply -f sonarqube/manifests.yaml
+#        kubectl apply -f webapp/manifests.k8s.yml
