--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,7 +29,8 @@ jobs:
         uses: google-github-actions/auth@v0
         with:
           token_format: 'access_token'
-          workload_identity_provider: 'projects/813165853992/locations/global/workloadIdentityPools/cicd-pool-git/providers/cicd-provider'
+          workload_identity_provider: 'projects/352111373069/locations/global/workloadIdentityPools/github-wif-pool/*'
+          #'projects/813165853992/locations/global/workloadIdentityPools/cicd-pool-git/providers/cicd-provider'
           service_account: 'github-sa@champ-392921.iam.gserviceaccount.com'
 
       - name: Terraform Setup
