--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -6,9 +6,9 @@ on:
   pull_request:
 
 env:
-  TF_VAR_POSTGRESQL_USERNAME: ${{ secrets.POSTGRESQL_USERNAME}}
-  TF_VAR_POSTGRESQL_PASSWORD: ${{ secrets.POSTGRESQL_PASSWORD}}
-  TF_VAR_POSTGRESQL_DATABASE: ${{ secrets.POSTGRESQL_DATABASE}}
+  TF_VAR_MYSQL_USERNAME: ${{ secrets.MYSQL_USERNAME}}
+  TF_VAR_MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD}}
+  TF_VAR_MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE}}
 
 permissions:
   contents: read
