--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Test script
         run: |-
           echo $TF_VAR_MYSQL_PASSWORD
-          echo ${var.MYSQL_PASSWORD}
+        #  echo ${var.MYSQL_PASSWORD}
 
       - name: Terraform Apply
         #if: github.ref == 'refs/heads/"main"'
