--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -7,11 +7,11 @@ on:
 env:
   #PROJECT_ID: champ-392921
   MYSQL_USERNAME: ${{ secrets.MYSQL_USERNAME}}
-  MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD}}
+  pwd: ${{ secrets.pwd}}
   MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE}}
 jobs:
   setup-build-publish-deploy:
-    name: docker image, k8s manifests -> GKE
+    name: WP deploy
     runs-on: ubuntu-latest
     environment: production
 
