--- a/wordpress/manifests.yaml
+++ b/wordpress/manifests.yaml
@@ -30,7 +30,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: mysql
-                  key: ${env.pwd}
+                  key: ${{env.pwd}}
           ports:
             - containerPort: 3306
               name: mysql
