--- a/wordpress/manifests.yaml
+++ b/wordpress/manifests.yaml
@@ -3,6 +3,17 @@ kind: Namespace
 metadata:
   name: wordpress
 ---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: mysql-volumeclaim
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 200Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
