--- a/wordpress/manifests.yaml
+++ b/wordpress/manifests.yaml
@@ -17,6 +17,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  key: $pwd
   name: mysql
   namespace: wordpress
   labels:
@@ -41,7 +42,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: mysql
-                  key: ${{env.MYSQL_PASSWORD}}
+                  key: $key
           ports:
             - containerPort: 3306
               name: mysql
