--- a/wordpress/manifests.yaml
+++ b/wordpress/manifests.yaml
@@ -41,7 +41,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: mysql
-                  key: $pwd
+                  key: ${pwd}
           ports:
             - containerPort: 3306
               name: mysql
@@ -52,3 +52,4 @@ spec:
         - name: mysql-persistent-storage
           persistentVolumeClaim:
             claimName: mysql-volumeclaim
+---
