--- a/wordpress/manifests.yaml
+++ b/wordpress/manifests.yaml
@@ -41,7 +41,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: mysql
-                  key: ${pwd}
+                  key: $key
           ports:
             - containerPort: 3306
               name: mysql
