--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -48,4 +48,4 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: Deploy manifests to gke
       run: |-
-        kubectl apply -f wordpress/manifests.yaml --env key=$pwd
+        kubectl apply -f wordpress/manifests.yaml --env pwd
