--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -46,6 +46,10 @@ jobs:
         curl -sfLo kustomize https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
         chmod u+x ./kustomize
     # Deploy the Docker image to the GKE cluster
+    - name: create secret from json
+      run: |-
+        kubectl create secret generic cloudsql-instance-credentials --from-file $wpsa
+
     - name: Deploy manifests to gke
       run: |-
         echo $pwd
