--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -48,8 +48,8 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: create secret from json and envsbust
       run: |-
+        kubectl create secret generic cloudsql-instance-credentials --from-file ${{ secrets.pwd}}
         cat wordpress/wordpress_cloudsql.yaml.template | envsubst > wordpress/wordpress_cloudsql.yaml
-#        kubectl create secret generic cloudsql-instance-credentials --from-file $wpsa
 
     - name: Deploy manifests to gke
       run: |-
