--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -49,6 +49,8 @@ jobs:
     - name: create secret from json and envsbust
       run: |-
         kubectl create secret generic cloudsql-db-credentials --from-literal username=$MYSQL_USERNAME --from-literal password=$pwd
+
+        kubectl create secret generic cloudsql-instance-credentials --from-literal $wpsa
         
         cat wordpress/wordpress_cloudsql.yaml.template | envsubst > wordpress/wordpress_cloudsql.yaml
 
