--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -49,10 +49,8 @@ jobs:
     - name: create secret from json and envsbust
       run: |-
         kubectl create secret generic cloudsql-db-credentials --from-literal username=$MYSQL_USERNAME --from-literal password=$pwd
-
-        jq ‘.build=env.wpsa’ >> tmp.json
-
-        kubectl create secret generic cloudsql-instance-credentials --from-literal tmp.json
+        
+        kubectl create secret generic cloudsql-instance-credentials --from-file wp-sa.json
         
         cat wordpress/wordpress_cloudsql.yaml.template | envsubst > wordpress/wordpress_cloudsql.yaml
 
