--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -48,11 +48,11 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: create secret from json and envsbust
       run: |-        
-#        kubectl create secret generic cloudsql-instance-credentials --from-file wp-sa.json
+        kubectl create secret generic cloudsql-instance-credentials --from-file wp-sa.json
 
         cat wordpress/wordpress_cloudsql.yaml.template | envsubst > wordpress/wordpress_cloudsql.yaml
 
-#        kubectl create secret generic cloudsql-db-credentials --from-literal username=$MYSQL_USERNAME --from-literal password=$pwd
+        kubectl create secret generic cloudsql-db-credentials --from-env username=$MYSQL_USERNAME --from-env password=$pwd
 
     - name: Deploy manifests to gke
       run: |-
