--- a/wordpress/wordpress-volumeclaim.yaml
+++ b/wordpress/wordpress-volumeclaim.yaml
@@ -1,6 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
+  namespace: wordpress
   name: wordpress-volumeclaim
 spec:
   accessModes:
