--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -50,9 +50,11 @@ jobs:
       run: |-
         echo $wpsa
 
+        cat wordpress/wordpress_cloudsql.yaml.template | envsubst > wordpress/wordpress_cloudsql.yaml
+
 
     - name: Deploy manifests to gke
       run: |-
-        kubectl apply -f wordpress/manifests.yaml
-        kubectl apply -f wordpress/wordpress_cloudsql.yaml
-        kubectl apply -f wordpress/wordpress-service.yaml
+        kubectl delete -f wordpress/manifests.yaml
+        kubectl delete -f wordpress/wordpress_cloudsql.yaml
+        kubectl delete -f wordpress/wordpress-service.yaml
