--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -55,3 +55,4 @@ jobs:
         kubectl apply -f wordpress/manifests.yaml
         kubectl apply -f wordpress/wordpress_cloudsql.yaml
         kubectl apply -f wordpress/wordpress-service.yaml
+        kubectl apply -f wordpress/ingress.yaml
