--- a/wordpress/wordpress-service.yaml
+++ b/wordpress/wordpress-service.yaml
@@ -1,6 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    cloud.google.com/neg: '{"ingress": true}'
+    cloud.google.com/backend-config: '{"default": "armorpolicy-wp"}'
   namespace: wordpress
   labels:
     app: wordpress
