--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -52,7 +52,9 @@ jobs:
 
     - name: Deploy manifests to gke
       run: |-
-        kubectl apply -f wordpress/manifests.yaml
-        kubectl apply -f wordpress/wordpress_cloudsql.yaml
-        kubectl apply -f wordpress/wordpress-service.yaml
-        kubectl apply -f wordpress/ingress.yaml
+        kubectl apply -f wordpress/*
+#        kubectl apply -f wordpress/manifests.yaml
+#        kubectl apply -f wordpress/wordpress-volumeclaim.yaml
+#        kubectl apply -f wordpress/wordpress_cloudsql.yaml
+#        kubectl apply -f wordpress/wordpress-service.yaml
+#        kubectl apply -f wordpress/ingress.yaml
