--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -52,9 +52,12 @@ jobs:
 
     - name: Deploy manifests to gke
       run: |-
-        kubectl apply -f wordpress/*
-#        kubectl apply -f wordpress/manifests.yaml
-#        kubectl apply -f wordpress/wordpress-volumeclaim.yaml
-#        kubectl apply -f wordpress/wordpress_cloudsql.yaml
-#        kubectl apply -f wordpress/wordpress-service.yaml
-#        kubectl apply -f wordpress/ingress.yaml
+        kubectl apply -f wordpress/manifests.yaml
+        kubectl apply -f wordpress/mysql-volumeclaim.yaml
+        kubectl apply -f wordpress/mysql.yaml
+        kubectl apply -f wordpress/mysql-service.yaml        
+        kubectl apply -f wordpress/wordpress-volumeclaim.yaml
+        kubectl apply -f wordpress/wordpress_cloudsql.yaml
+        kubectl apply -f wordpress/wordpress.yaml
+        kubectl apply -f wordpress/wordpress-service.yaml
+        kubectl apply -f wordpress/ingress.yaml
