--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -56,4 +56,8 @@ jobs:
         kubectl delete -f wordpress/mysql.yaml
         kubectl delete -f wordpress/mysql-service.yaml        
         kubectl delete -f wordpress/wordpress-volumeclaim.yaml        
-        kubectl delete -f wordpress/wordpress.yaml       
+        kubectl delete -f wordpress/wordpress.yaml
+        kubectl delete -f wordpress/manifests.yaml  
+        kubectl delete -f wordpress/wordpress_cloudsql.yaml
+        kubectl delete -f wordpress/wordpress-service.yaml
+        kubectl delete -f wordpress/ingress.yaml       
