--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -52,8 +52,8 @@ jobs:
 
     - name: Deploy manifests to gke
       run: |-
-        kubectl delete -f wordpress/manifests.yaml
-        kubectl delete -f wordpress/wordpress_cloudsql.yaml
-        kubectl delete -f wordpress/wordpress-service.yaml
-        kubectl delete -f wordpress/ingress.yaml
-#        kubectl apply -f wordpress/wordpress-volumeclaim.yaml
+        kubectl apply -f wordpress/wordpress-volumeclaim.yaml
+        kubectl apply -f wordpress/wordpress_cloudsql.yaml
+        kubectl apply -f wordpress/wordpress-service.yaml
+        kubectl apply -f wordpress/ingress.yaml
+#        
