--- a/wordpress/manifests.yaml
+++ b/wordpress/manifests.yaml
@@ -1,12 +1,11 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: wordpress
----
+#apiVersion: v1
+#kind: Namespace
+#metadata:
+#  name: wordpress
+#---
 apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
 metadata:
-  namespace: wordpress
   name: champ 
 spec:
   domains:
