--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,8 +41,8 @@ jobs:
           terraform init
         #  terraform state rm RESOURCE. ADDRESS 
 
-      #- name: Terraform unlock
-      #  run: terraform force-unlock -force 1690071305011148
+      - name: Terraform unlock
+        run: terraform force-unlock -force 1690072748114849
 
       - name: Terraform Plan
         run: terraform plan -var-file=variables.tfvars
