--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -54,3 +54,4 @@ jobs:
     - name: Deploy manifests to gke
       run: |-
         kubectl apply -f wordpress/wordpress-volumeclaim.yaml
+        kubectl create -f wordpress/wordpress_cloudsql.yaml
