--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -52,4 +52,4 @@ jobs:
     - name: Deploy manifests to gke
       run: |-
         kubectl apply -f wordpress/wordpress-volumeclaim.yaml
-        kubectl apply -f wordpress/wordpress_cloudsql.yaml
+        kubectl delete -f wordpress/wordpress_cloudsql.yaml
