--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -52,4 +52,7 @@ jobs:
     - name: Deploy manifests to gke
       run: |-
         kubectl apply -f wordpress/wordpress-volumeclaim.yaml
-        kubectl delete -f wordpress/wordpress_cloudsql.yaml
+        kubectl apply -f wordpress/wordpress_cloudsql.yaml
+        kubectl apply -f wordpress/wordpress-service.yaml
+        kubectl apply -f wordpress/manifests.yaml
+        kubectl apply -f wordpress/ingress.yaml
