--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -54,5 +54,5 @@ jobs:
         kubectl apply -f wordpress/wordpress-volumeclaim.yaml
         kubectl apply -f wordpress/wordpress_cloudsql.yaml
         kubectl apply -f wordpress/wordpress-service.yaml
-        kubectl apply -f wordpress/manifests.yaml
+        kubectl delete -f wordpress/manifests.yaml
         kubectl apply -f wordpress/ingress.yaml
