--- a/wordpress/manifests.yaml
+++ b/wordpress/manifests.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
 metadata:
-  name: champ 
+  name: champ-cert 
 spec:
   domains:
     - projectchamp.info
