--- a/.github/workflows/wp-deploy.yml
+++ b/.github/workflows/wp-deploy.yml
@@ -47,12 +47,13 @@ jobs:
     # Deploy the Docker image to the GKE cluster
     - name: create secret from json and envsbust
       run: |-
-        cat wordpress/wordpress_cloudsql.yaml.template | envsubst > wordpress/wordpress_cloudsql.yaml
+        
 
     - name: Deploy manifests to gke
       run: |-
+        cat wordpress/wordpress_cloudsql.yaml.template | envsubst > wordpress/wordpress_cloudsql.yaml
         kubectl delete -f wordpress/wordpress-volumeclaim.yaml
         kubectl delete -f wordpress/wordpress_cloudsql.yaml
-#        kubectl delete -f wordpress/wordpress-service.yaml
+        kubectl delete -f wordpress/wordpress-service.yaml
 #        kubectl delete -f wordpress/manifests.yaml
 #        kubectl apply -f wordpress/ingress.yaml
