--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,8 +41,8 @@ jobs:
           terraform init
         #  terraform state rm RESOURCE. ADDRESS 
 
-      - name: Terraform unlock
-        run: terraform force-unlock -force 1690117670913575
+      #- name: Terraform unlock
+      #  run: terraform force-unlock -force 1690117670913575
 
       - name: Terraform Plan
         run: terraform plan -var-file=variables.tfvars
